# PyFibreBundle

./: .readthedocs.yaml  LICENSE  README.md  __init__.py  _config.yml  index.md  pybundle.py  pybundle_gui.py  pyproject.toml  requirements.txt  testpy.py
benchmark/: benchmark.py  context.py
data/: 10mm_1.tif  OCT_endo1.tif  ThinBundle.tif
docs/: find_cores_hough.py  notes.txt  requirements.txt
docs/source/: conf.py  core.rst  functions.rst  index.rst  install.rst  linear_interp.rst  low_level.rst  mosaicing.rst  pybundle_class.rst  super_res.rst
examples/: compare_recons.py  edge_filtering_example.py  filering_example.py  filtering_colour_example.py  filtering_example.py  linear_interp_colour_example.py  linear_interp_example.py  linear_interp_numba_example.py  mosaicing_example.py  super_res_example.py  super_res_example_low_level.py  super_res_example_oop.py
examples/output/: f_0.8_0.1.tif  f_0.8_0.2.tif  f_0.8_0.3.tif  f_0.8_0.4.tif  f_0.8_0.5.tif  g_0.5.tif  (+54 more)
pybundle/: __init__.py  bundle_calibration.py  core.py  core_interpolation.py  mosaic.py  pybundle.py  super_res.py  utility.py
test/: check1.py  context.py  test_all.py  test_compare_recons.py  test_find_cores.py  test_find_cores_Hough.py  test_loc.py  test_mask.py  test_masking.py  test_masking_col.py  test_mosaic.py  test_mosaic_col.py  test_mosaic_full.py  test_processing_im_type.py  test_pybundle.py  test_pybundle_oop.py  test_recon_tri_interp.py  test_recon_tri_interp_col.py  test_simple_processing.py  test_simple_processing_col.py  test_sr_sort_stack.py  test_super_res.py  test_super_res_oop.py
(+40 files in other folders)
